# ParallelReductionsBenchmark

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  README.md  Results.csv  main.cpp  reduce_bench.cpp  reduce_bench.cu  reduce_bench.py  reduce_bench.rs  reduce_blas.hpp  reduce_cpu.hpp  reduce_cublas.cuh  reduce_cublas.hpp  reduce_cuda.cuh  reduce_cuda.hpp  reduce_metal.h  reduce_metal.metal  reduce_opencl.cl  reduce_opencl.hpp
.github/workflows/: release.yml
Shared/: ComputeGraph.hpp  HelperAliasis.hpp  HelperMethods.hpp  ResourcesManager.hpp
Shared/ArrayFire/: Tests.cpp
Shared/CPU/: Tests.hpp
Shared/Halide/: Tests.hpp
Shared/Metal/: DataParallel.metal
Shared/OpenCL/: ComputeApp.cpp  ComputeApp.hpp  DataParallel.cl  ReduceSum.cl  Tests.cpp  Tests.hpp
Shared/Vulkan/: Tests.cpp  Tests.hpp
Shared/Vulkan/Custom/: HelperLodepng.cpp  Mandelbrot.comp
Shared/Vulkan/DataParallel/: ArithmAddArr.comp  ArithmAddArr.spv  ArithmMulArr.comp  ArithmMulArr.spv  PowExp.spv  PowSqrt.spv
deprecated/: ComputeGraph.cpp  HelperMethods.cpp  ResourcesManager.cpp
deprecated/ArrayFire/: Tests.cpp  Tests.hpp
deprecated/CPU/: Tests.cpp
deprecated/Halide/: Tests.cpp
deprecated/OpenCL/: ComputeApp.cpp  ReduceSum.spv  Tests.cpp
deprecated/TriSYCL/: PrintInfo.cpp  Tests.cpp  Tests.hpp
deprecated/Vulkan/: ComputeApp.cpp  ComputeApp.hpp
deprecated/Vulkan/DataParallel/: ArithmMulConst4.comp  ArithmMulConst4.spv  PowSqrt.comp  SAXPY.comp  TrigCos.comp  TrigCos.spv
results/: deprecated.csv
