[package]
name = "ParallelReductionsBenchmark"
version = "0.5.2"
edition = "2021"

[dependencies]
num_cpus = "1.16"
futures-lite = "2.3"
smol = "2.0"
rayon = "1.10"
criterion = "0.6"
Tokio = { package = "tokio", version = "1.45", features = [
    "rt-multi-thread",
    "macros",
] }

[[bench]]
name = "reduce_bench"
path = "reduce_bench.rs"
harness = false
