[package]
name = "ParallelReductionsBenchmark"
version = "0.5.2"
edition = "2021"

[dependencies]
futures = "0.3"
criterion = "0.6"
num_cpus = "1.16"
async-executor = "1.13"
rayon = "1.10"
fork_union = "0.3"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "reduce_bench"
path = "reduce_bench.rs"
harness = false
